ExpressPochta in work

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,17 +6,17 @@
    <meta name="description" content="Bootstrap Admin App">
    <meta name="keywords" content="app, responsive, jquery, bootstrap, dashboard, admin">
    <link rel="icon" type="image/x-icon" href="favicon.ico">
-   <title>{% block title %} {{'Sklad Express'|trans }} {% endblock %}</title>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/@fortawesome/fontawesome-free/css/brands.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/@fortawesome/fontawesome-free/css/regular.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/@fortawesome/fontawesome-free/css/solid.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/@fortawesome/fontawesome-free/css/fontawesome.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/simple-line-icons/css/simple-line-icons.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/animate.css/animate.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/whirl/dist/whirl.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/vendor/weather-icons/css/weather-icons.css') }}"/>
-        <link rel="stylesheet" href="{{ asset('sklad-express/css/bootstrap.css') }}" id="bscss" />
-        <link rel="stylesheet" href="{{ asset('sklad-express/css/app.css') }}" id="maincss" />
+   <title>{% block title %} {{"Sklad Express"|trans }} {% endblock %}</title>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/@fortawesome/fontawesome-free/css/brands.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/@fortawesome/fontawesome-free/css/regular.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/@fortawesome/fontawesome-free/css/solid.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/@fortawesome/fontawesome-free/css/fontawesome.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/simple-line-icons/css/simple-line-icons.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/animate.css/animate.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/whirl/dist/whirl.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/vendor/weather-icons/css/weather-icons.css") }}"/>
+        <link rel="stylesheet" href="{{ asset("sklad-express/css/bootstrap.css") }}" id="bscss" />
+        <link rel="stylesheet" href="{{ asset("sklad-express/css/app.css") }}" id="maincss" />
 
         {% block stylesheets %}{% endblock %}
     </head>
@@ -25,16 +25,16 @@
             {% block body %}{% endblock %}
         </div>
 
-        <script src="{{ asset('sklad-express/vendor/modernizr/modernizr.custom.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/js-storage/js.storage.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/i18next/i18next.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/i18next-xhr-backend/i18nextXHRBackend.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/jquery/dist/jquery.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/popper.js/dist/umd/popper.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/bootstrap/dist/js/bootstrap.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js') }}"></script>
-        <script src="{{ asset('sklad-express/vendor/parsleyjs/dist/parsley.js') }}"></script>
-        <script src="{{ asset('sklad-express/js/app.js') }}"></script>
+        <script src="{{ asset("sklad-express/vendor/modernizr/modernizr.custom.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/js-storage/js.storage.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/i18next/i18next.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/i18next-xhr-backend/i18nextXHRBackend.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/jquery/dist/jquery.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/popper.js/dist/umd/popper.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/bootstrap/dist/js/bootstrap.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/bootstrap-datepicker/dist/js/bootstrap-datepicker.js") }}"></script>
+        <script src="{{ asset("sklad-express/vendor/parsleyjs/dist/parsley.js") }}"></script>
+        <script src="{{ asset("sklad-express/js/app.js") }}"></script>
         {% block javascripts %}{% endblock %}
     </body>
 </html>
