--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -1,6 +1,6 @@
-{% extends 'cabinet/cabinet_layout.html.twig' %}
+{% extends "cabinet/cabinet_layout.html.twig" %}
 
-{% block title %}{{'Dashboard'|trans }}{% endblock %}
+{% block title %}{{"Dashboard"|trans }}{% endblock %}
 
 {% block content %}
                         <div class="col-xl-6">
