--- a/templates/cabinet/footer.html.twig
+++ b/templates/cabinet/footer.html.twig
@@ -1,1 +1,1 @@
-<footer class="footer-container"><span>&copy; 2019 - Angle</span></footer>
+<footer class="footer-container"><span>&copy; {{ "copyRigtht"|trans }}</span></footer>
