--- a/templates/cabinet/offsidebar.html.twig
+++ b/templates/cabinet/offsidebar.html.twig
@@ -34,7 +34,7 @@
                     </div>
                 </li><!-- END user info-->
                 <!-- Iterates over all sidebar items-->
-                {{ include('cabinet/menu.html.twig') }}   <!-- menu-->
+                {{ include("cabinet/menu.html.twig") }}   <!-- menu-->
             </ul><!-- END sidebar nav-->
         </nav>
     </div><!-- END Sidebar (left)-->
