--- a/templates/cabinet/parcels/editform.html.twig
+++ b/templates/cabinet/parcels/editform.html.twig
@@ -1,6 +1,6 @@
-{% extends 'cabinet/cabinet_layout.html.twig' %}
+{% extends "cabinet/cabinet_layout.html.twig" %}
 
-    {% set title= 'Addresses Edit' %}
+    {% set title= "Addresses Edit" %}
     {% if page_title is defined and page_title is not empty %}
         {% set title=page_title %}
     {% endif %}
@@ -19,8 +19,8 @@
 
                     {%
                         form_theme form
-                        'system/product-order-theme.html.twig'
-                        'system/jquery.collection.html.twig'
+                        "system/product-order-theme.html.twig"
+                        "system/jquery.collection.html.twig"
                     %}
                     {{  form_errors(form) }}
 
@@ -95,7 +95,7 @@
                                         {{ form_widget(form.addresses) }}
                                     {% endif %}
                                     <div class="input-group-append">
-                                        <a  href="{{ path('post_address_create') }}" target="_blank" class="btn btn-info btn-sm">{{ 'Add Address' | trans }}
+                                        <a  href="{{ path("post_address_create") }}" target="_blank" class="btn btn-info btn-sm">{{ "Add Address" | trans }}
                                         </a>
                                     </div>
                                     <div class="invalid-feedback">{{ form_errors(form.addresses) }}</div>
@@ -168,7 +168,7 @@
                     </div>
 
                     <div class="row">
-                        <div class="col-md-3">
+                        <div class="col-md-4">
                             <div class="form-group">
                                 {{ form_label(form.shippingCosts,"shippingCosts"|trans, {
                                     "label_attr": {"class": "text-muted"}
@@ -183,8 +183,40 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                {{ form_label(form.volumeWeigth,"volumeWeigth"|trans, {
+                                    "label_attr": {"class": "text-muted"}
+                                }) }}
+                                <div class="input-group with-focus ">
+                                    {% if form.volumeWeigth.vars.errors|length %}
+                                        {{ form_widget(form.volumeWeigth, {"attr": {"class": "is-invalid form-control"}}) }}
+                                    {% else %}
+                                        {{ form_widget(form.volumeWeigth) }}
+                                    {% endif %}
+                                    <div class="invalid-feedback">{{ form_errors(form.volumeWeigth) }}</div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-md-4">
+                            <div class="form-group">
+                                {{ form_label(form.declareValue,"declareValue"|trans, {
+                                    "label_attr": {"class": "text-muted"}
+                                }) }}
+                                <div class="input-group with-focus ">
+                                    {% if form.declareValue.vars.errors|length %}
+                                        {{ form_widget(form.declareValue, {"attr": {"class": "is-invalid form-control"}}) }}
+                                    {% else %}
+                                        {{ form_widget(form.declareValue) }}
+                                    {% endif %}
+                                    <div class="invalid-feedback">{{ form_errors(form.declareValue) }}</div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
 
-                        <div class="col-md-9">
+                    <div class="row">
+                        <div class="col-md-12">
                             <div class="form-group">
                                 {{ form_label(form.comment,"comment"|trans, {
                                     "label_attr": {"class": "text-muted"}
@@ -200,30 +232,37 @@
                                 </div>
                             </div>
                         </div>
-
                     </div>
-
-                    {{ form_end(form) }}
-
+                        <div class="row">
+                             <div class="col-md-3">
+                                   {{ form_widget(form.save) }}
+                            </div>
+                            <div class="col-md-3">
+                                <a href="{{ path("post_parcels") }}" class="btn btn-secondary btn-block mt-3"> {{ "Cancel" | trans }}</a>
+                            </div>
+                        </div>
+                        {{ form_end(form) }}
+                            </div>
+                    </div>
                 </div>
-            </div>
-        </div>
+
+
 
 {% endblock %}
  {% block javascripts %}
-     <script src="{{ asset('sklad-express/js/jquery.collection.js') }}"></script>
+     <script src="{{ asset("sklad-express/js/jquery.collection.js") }}"></script>
 <script>
-     jQuery('.datepicker').datepicker({
-     uiLibrary: 'bootstrap4'
+     jQuery(".datepicker").datepicker({
+     uiLibrary: "bootstrap4"
      });
 
 
 
-    $('.product-list').collection({
-        'allow_up': false,
-        'allow_down': false,
-        'add': '<a href="#" class="btn btn-success">{{ "Add product" | trans }}</a>',
-        'add_at_the_end': true
+    $(".product-list").collection({
+        "allow_up": false,
+        "allow_down": false,
+        "add": "<a href='#' class='btn btn-success'>{{ "Add product" | trans }}</a>",
+        "add_at_the_end": true
      });
 
 
