--- a/templates/cabinet/sidebar.html.twig
+++ b/templates/cabinet/sidebar.html.twig
@@ -3,12 +3,12 @@
     <nav class="navbar topnavbar">
         <!-- START navbar header-->
         <div class="navbar-header"><a class="navbar-brand" href="#/">
-                <div class="brand-logo"><img class="img-fluid" src="{{ asset('img/logo.png') }}" alt="App Logo"></div>
+                <div class="brand-logo"><img class="img-fluid" src="{{ asset("img/logo.png") }}" alt="App Logo"></div>
 {#                <div class="brand-logo-collapsed"><img class="img-fluid" src="img/logo-single.png" alt="App Logo"></div>#}
             </a></div><!-- END navbar header-->
-        {{ include('cabinet//sidebar/navbarleft.html.twig') }}      <!-- Left navba-->
-        {{ include('cabinet//sidebar/navbarright.html.twig') }}      <!-- Right Navbar-->
+        {{ include("cabinet//sidebar/navbarleft.html.twig") }}      <!-- Left navba-->
+        {{ include("cabinet//sidebar/navbarright.html.twig") }}      <!-- Right Navbar-->
         <!-- START Search form-->
-        {{ include('cabinet//sidebar/topsearch.html.twig') }}      <!-- Right Navbar-->
+        {{ include("cabinet//sidebar/topsearch.html.twig") }}      <!-- Right Navbar-->
     </nav><!-- END Top Navbar-->
 </header>
