--- a/templates/system/product-order-theme.html.twig
+++ b/templates/system/product-order-theme.html.twig
@@ -47,7 +47,7 @@
                 <div class="col-md-2">
                     <div class="form-group">
 
-                        {{ form_label(form.count,"shipDate"|trans, {
+                        {{ form_label(form.count,"count"|trans, {
                             "label_attr": {"class": "text-muted"}
                         }) }}
                         <div class="input-group with-focus ">
