--- a/templates/cabinet/cabinet_layout.html.twig
+++ b/templates/cabinet/cabinet_layout.html.twig
@@ -1,11 +1,11 @@
-{% extends 'base.html.twig' %}
+{% extends "base.html.twig" %}
 {% block stylesheets %}
 
 {% endblock %}
  {% block body %}
      <!-- top navbar-->
-     {{ include('cabinet/sidebar.html.twig') }}      <!-- sidebar-->
-     {{ include('cabinet/offsidebar.html.twig') }}   <!-- offsidebar-->
+     {{ include("cabinet/sidebar.html.twig") }}      <!-- sidebar-->
+     {{ include("cabinet/offsidebar.html.twig") }}   <!-- offsidebar-->
 
      <aside class="offsidebar d-none">
      </aside><!-- Main section-->
@@ -13,7 +13,7 @@
          <!-- Page content-->
          <div class="content-wrapper">
              <div class="content-heading">
-                 <div>{% block title %}{{'Dashboard'|trans }}{% endblock %}</div>
+                 <div>{% block title %}{{"Dashboard"|trans }}{% endblock %}</div>
              </div>
              <div class="row">
                  <div class="col-xl-6 col-6 br py-2">
@@ -41,6 +41,6 @@
      </div>
      #}
      </section><!-- Page footer-->
-     {{ include('cabinet/footer.html.twig') }}
+     {{ include("cabinet/footer.html.twig") }}
  {% endblock %}
  {% block javascripts %}{% endblock %}
