--- a/templates/cabinet/menu.html.twig
+++ b/templates/cabinet/menu.html.twig
@@ -32,7 +32,15 @@
                            and
                            page_id =="post_parcels"
                        %} active {% endif %} ">
-                           <a href="{{ path("post_parcels") }}" title="{{"Parcerls List"|trans }}"><span data-localize="sidebar.nav.form.PARCELS_LIST">{{"Parcels List"|trans }}</span></a>
+                           <a href="{{ path("post_parcels") }}" title="{{"New Parcerls List"|trans }}"><span data-localize="sidebar.nav.form.PARCELS_LIST">{{"New Parcerls List"|trans }}</span></a>
+                       </li>
+                       <li class="{% if page_id is defined
+                           and
+                           page_id is not empty
+                           and
+                           page_id =="post_parcels_send"
+                       %} active {% endif %} ">
+                           <a href="{{ path("post_parcels_send") }}" title="{{"Send Parcerls List"|trans }}"><span data-localize="sidebar.nav.form.PARCELS_SEND">{{"Send Parcels List"|trans }}</span></a>
                        </li>
                        <li class="{% if page_id is defined
                            and
