--- a/templates/cabinet/parcels/parcels-send.html.twig
+++ b/templates/cabinet/parcels/parcels-send.html.twig
@@ -1,6 +1,6 @@
-{% extends 'cabinet/cabinet_layout.html.twig' %}
+{% extends "cabinet/cabinet_layout.html.twig" %}
 
-{% block title %}{{'Parcels'|trans }}{% endblock %}
+{% block title %}{{"Parcels"|trans }}{% endblock %}
 
 {% block content %}
                         <div class="col-xl-6">
