--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -1,15 +1,15 @@
-{% extends 'base_operation.html.twig' %}
+{% extends "base_operation.html.twig" %}
 
-{% block title %}{{'Register'|trans }}{% endblock %}
+{% block title %}{{"Register"|trans }}{% endblock %}
 
 {% block content %}
     <div class="card-body">
-               <p class="text-center py-2">{{'SIGNUP TO GET INSTANT ACCESS'|trans}}.</p>
+               <p class="text-center py-2">{{"SIGNUP TO GET INSTANT ACCESS"|trans}}.</p>
 
-   {{ form_start(registrationForm, {'attr': {'id': 'registerForm','class':'mb-3','novalidate':true}}) }}
+   {{ form_start(registrationForm, {"attr": {"id": "registerForm","class":"mb-3","novalidate":true}}) }}
         <div class="form-group">
-               {{ form_label(registrationForm.email,'Email address'|trans, {
-                            'label_attr': {'class': 'text-muted'}
+               {{ form_label(registrationForm.email,"Email address"|trans, {
+                            "label_attr": {"class": "text-muted"}
                                 }) }}
                   <div class="input-group with-focus">
                          {{ form_widget(registrationForm.email)}}
@@ -22,8 +22,8 @@
         </div>
         
         <div class="form-group">
-            {{form_label(registrationForm.plainPassword,'Password'|trans, {
-                                            'label_attr': {'class': 'text-muted'}
+            {{form_label(registrationForm.plainPassword,"Password"|trans, {
+                                            "label_attr": {"class": "text-muted"}
                                             }) }}
                      <div class="input-group with-focus">
                          {{ form_widget(registrationForm.plainPassword)}}
@@ -35,8 +35,8 @@
                      </div>
         </div>
        <div class="form-group">
-            {{form_label(registrationForm.rePlainPassword,'Retype Password'|trans, {
-                                            'label_attr': {'class': 'text-muted'}
+            {{form_label(registrationForm.rePlainPassword,"Retype Password"|trans, {
+                                            "label_attr": {"class": "text-muted"}
                                             }) }}
                      <div class="input-group with-focus">
                          {{ form_widget(registrationForm.rePlainPassword)}}
@@ -51,12 +51,12 @@
     <label>
         {{ form_widget(registrationForm.agreed)}}
         <span class="fa fa-check">
-        </span> {{'I agree with the'|trans}}<a class="ml-1" href="#">{{'terms'|trans}}</a></label></div>
+        </span> {{"I agree with the"|trans}}<a class="ml-1" href="#">{{"terms"|trans}}</a></label></div>
 
-    {{ form_row(registrationForm.save, {'label': 'Create account'|trans})}}
+    {{ form_row(registrationForm.save, {"label": "Create account"|trans})}}
     
     {{ form_end(registrationForm) }}
-     <p class="pt-3 text-center">{{'Have an account?'|trans}}</p>
-     <a class="btn btn-block btn-secondary" href="{{url('user_login')}}">{{'Signup'|trans}}</a>
+     <p class="pt-3 text-center">{{"Have an account?"|trans}}</p>
+     <a class="btn btn-block btn-secondary" href="{{url("user_login")}}">{{"Signup"|trans}}</a>
     </div>
 {% endblock %}
