--- a/templates/standard_layout.html.twig
+++ b/templates/standard_layout.html.twig
@@ -1,7 +1,7 @@
-{% extends '@SonataAdmin/standard_layout.html.twig' %}
+{% extends "@SonataAdmin/standard_layout.html.twig" %}
 
 {% block sonata_top_nav_menu %}
-     {% if app.user and is_granted('ROLE_SONATA_ADMIN') %}
+     {% if app.user and is_granted("ROLE_SONATA_ADMIN") %}
          <div class="navbar-custom-menu">
              <ul class="nav navbar-nav">
                  {% block sonata_top_nav_menu_add_block %}
@@ -9,7 +9,7 @@
                          <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                              <i class="fa fa-plus-square fa-fw" aria-hidden="true"></i> <i class="fa fa-caret-down" aria-hidden="true"></i>
                          </a>
-                         {% include sonata_admin.adminPool.getTemplate('add_block') %}
+                         {% include sonata_admin.adminPool.getTemplate("add_block") %}
                      </li>
                  {% endblock %}
                  {% block sonata_top_nav_menu_user_block %}
@@ -18,7 +18,7 @@
                              <i class="fa fa-user fa-fw" aria-hidden="true"></i> <i class="fa fa-caret-down" aria-hidden="true"></i>
                          </a>
                          <ul class="dropdown-menu dropdown-user">
-                             <li> <a href="{{ path('admin_logout') }}"> Logout </a></li>
+                             <li> <a href="{{ path("admin_logout") }}"> Logout </a></li>
                          </ul>
                      </li>
                  {% endblock %}
