--- a/templates/cabinet/parcels/parcels.html.twig
+++ b/templates/cabinet/parcels/parcels.html.twig
@@ -37,8 +37,16 @@
                                     <td>{{ item.shippingCosts }}</td>
                                     <td>{{ item.declareValue }}</td>
                                     <td>{{ item.addresses.fullAddress }}</td>
-                                    <td><a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Order" | trans }}
-                                        </a></td>
+                                    <td>
+                                        {% if item.orderStatus is empty or item.orderStatus.status == 'new'%}
+                                            <a  href="{{ path("post_parcels_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Order" | trans }}
+                                            </a>
+                                            {% if item.shippingCosts > 0 %}
+                                            {% set liqPayForm=liqpay.LiqPayForm(item.shippingCosts,'Pay by ExpreaaPochta.com',"EXPRASSORDER_"~item.id) %}
+                                        {{ liqPayForm | raw }}
+                                            {% endif %}
+                                        {% endif %}
+                                    </td>
                                 </tr>
                             {% endfor %}
 
