--- a/templates/cabinet/cabinet_layout.html.twig
+++ b/templates/cabinet/cabinet_layout.html.twig
@@ -20,12 +20,13 @@
                      <div class="row">
                          <div class="col-lg-12">
                              <h4>{{ user.firstName }} {{ user.lastName }}</h4>
-                             {% if my_address is not empty and my_address[0] is defined and my_address[0] is not empty %}
+
+                             {% if my_address is not empty  and my_address is not empty %}
                                  <address>
-                                     {{ my_address[0].address }} <br>
-                                     {{ my_address[0].city }} <br>
-                                     {{ my_address[0].country }} <br>
-                                     {{ my_address[0].zip }}
+                                     {{ my_address.address }} <br>
+                                     {{ my_address.city }} <br>
+                                     {{ my_address.country }} <br>
+                                     {{ my_address.zip }}
                                  </address>
                              {% endif %}
                          </div>
