--- a/templates/cabinet/dashboard/dashboard.html.twig
+++ b/templates/cabinet/dashboard/dashboard.html.twig
@@ -6,38 +6,33 @@
                         <div class="col-xl-6">
                             <!-- START card-->
                             <div class="card card-default">
-                                <div class="card-header"><div class="float-left badge badge-success">Пакунки (0)</div></div>
+                                <div class="card-header"><div class="float-left badge badge-success">{{ "New Orders"|trans }}</div></div>
                                 <div class="card-body">
                                     <!-- START table-responsive-->
                                     <div class="table-responsive">
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr>
-                                                <th></th>
-{#                                                <th>First Name</th>#}
-{#                                                <th>Last Name</th>#}
-{#                                                <th>Username</th>#}
+                                                <th>{{ "TN"| trans }}</th>
+                                                <th>{{ "shipgCost" | trans }}</th>
+                                                <th>{{ "declareValue" | trans }}</th>
+                                                <th>{{ "Adress" | trans }}</th>
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td>Нет покупок</td>
-{#                                                <td>Mark</td>#}
-{#                                                <td>Otto</td>#}
-{#                                                <td>@mdo</td>#}
-                                            </tr>
-{#                                            <tr>#}
-{#                                                <td>2</td>#}
-{#                                                <td>Jacob</td>#}
-{#                                                <td>Thornton</td>#}
-{#                                                <td>@fat</td>#}
-{#                                            </tr>#}
-{#                                            <tr>#}
-{#                                                <td>3</td>#}
-{#                                                <td>Larry</td>#}
-{#                                                <td>the Bird</td>#}
-{#                                                <td>@twitter</td>#}
-{#                                            </tr>#}
+
+                                            {% if ordersNew %}
+                                                {% for order in ordersNew %}
+                                                    <tr>
+                                                        <td>{{ order.trackingNumber }}</td>
+                                                        <td>{{ order.shippingCosts }}</td>
+                                                        <td>{{ order.declareValue }}</td>
+                                                        <td>{{ order.addresses.fullAddress }}</td>
+                                                    </tr>
+                                                {% endfor %}
+                                            {% else %}
+                                                <tr><td>{{ "No order" | trans }}</td></tr>
+                                            {% endif %}
                                             </tbody>
                                         </table>
                                     </div><!-- END table-responsive-->
@@ -54,23 +49,23 @@
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
                                                 <tr>
-                                                    <th>TN</th>
-                                                    <th>Comment</th>
-                                                    <th>Status</th>
+                                                    <th>{{ "TN"| trans }}</th>
+                                                    <th>{{ "Adress" | trans }}</th>
+                                                    <th>{{ "Status" | trans }}</th>
                                                 </tr>
                                             </thead>
                                             <tbody>
 
-                                                {% if orders %}
-                                                    {% for order in orders %}
+                                                {% if ordersSend %}
+                                                    {% for order in ordersSend %}
                                                         <tr>
-                                                            <td>{{ order.trackingNumber }}</td>
-                                                            <td>{{ order.comment }}</td>
-                                                            <td>{{ order.status }}</td>
+                                                            <td>{{ order.trNum }}</td>
+                                                            <td>{{ order.addresses.fullAddress }}</td>
+                                                            <td>{{ order.orderStatus.statuName| trans }}</td>
                                                         </tr>
                                                     {% endfor %}
                                                 {% else %}
-                                                    <tr><td>Нет отправок</td></tr>
+                                                    <tr><td>{{ "No order" | trans }}</td></tr>
                                                 {% endif %}
                                             </tbody>
                                         </table>
@@ -88,25 +83,27 @@
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr>
-                                                <th>Номер рахунку</th>
-                                                <th>Способ оплаты</th>
-                                                <th>Итого</th>
-                                                <th>Статус</th>
+                                                <th>{{ 'Nomer scheta'| trans }}</th>
+                                                <th>{{ 'Sposob oplaty'| trans }}</th>
+                                                <th>{{ 'Sum'| trans }}</th>
+                                                <th>{{ 'Status'| trans }}</th>
                                             </tr>
                                             </thead>
                                             <tbody>
-                                            <tr>
-                                                <td>123456</td>
-                                                <td>Card</td>
-                                                <td>8.00 USD</td>
-                                                <td>Оплачено</td>
-                                            </tr>
-                                            <tr>
-                                                <td>654321</td>
-                                                <td>Card</td>
-                                                <td>16.00 USD</td>
-                                                <td>Оплачено</td>
-                                            </tr>
+                                            {% if payment %}
+                                                {% for item in payment %}
+                                                    <tr>
+                                                    <tr>
+                                                        <td>{{ item.liqpayOrderId }}</td>
+                                                        <td>{{ "Card"|trans }}</td>
+                                                        <td>{{ item.sum }}</td>
+                                                        <td>{{ item.status | trans }}</td>
+                                                    </tr>
+                                                    </tr>
+                                                {% endfor %}
+                                            {% else %}
+                                                <tr><td>{{ "Not pay yet" | trans }}</td></tr>
+                                            {% endif %}
                                             </tbody>
                                         </table>
                                     </div><!-- END table-responsive-->
