--- a/templates/cabinet/menu.html.twig
+++ b/templates/cabinet/menu.html.twig
@@ -1,15 +1,36 @@
                <!-- Iterates over all sidebar items-->
                 <li class="nav-heading "><span data-localize="sidebar.heading.HEADER">{{"Main Navigation"|trans }}</span></li>
-                <li class="{% if page_id is defined
-                            and
-                            page_id is not empty
-                            and
-                    page_id =="post_profile"
-                %} active {% endif %}">
-                    <a href="{{ path("post_profile") }}" title="Profile">
-                        <em class="icon-grid"></em><span data-localize="sidebar.nav.PROFILE">{{"Profile"|trans }}</span>
-                    </a>
-                </li>
+               <li class="{% if page_id is defined
+                   and
+                   page_id is not empty
+                   and
+                   page_id in ["post_profile","post_profile_from_address"]
+               %} active {% endif %} ">
+                   <a  href="#postprofile" title="{{"Payment"|trans }}" data-toggle="collapse">
+                       <em class="icon-note"></em><span data-localize="sidebar.nav.postprofile">{{"Profile"|trans }}</span>
+                   </a>
+                   <ul class="sidebar-nav sidebar-subnav collapse" id="postprofile">
+                       <li class="sidebar-subnav-header">{{"Profile"|trans }}</li>
+                       <li class="{% if page_id is defined
+                           and
+                           page_id is not empty
+                           and
+                           page_id =="post_profile"
+                       %} active {% endif %} ">
+                           <a href="{{ path("post_profile") }}" title="{{"Profile"|trans }}"><span data-localize="sidebar.nav.form.Profile">{{"Profile"|trans }}</span></a>
+                       </li>
+                       <li class="{% if page_id is defined
+                           and
+                           page_id is not empty
+                           and
+                           page_id =="post_profile_from_address"
+                       %} active {% endif %} ">
+                           <a href="{{ path("post_profile_from_address") }}" title="{{"post_profile_from_address"|trans }}"><span data-localize="sidebar.nav.form.post_profile_from_address">{{"post_profile_from_address"|trans }}</span></a>
+                       </li>
+
+                   </ul>
+               </li>
+
                 <li class=" ">
                     <a href="{{ path("post_dashboard") }}" title="Dashboard">
                         <em class="icon-grid"></em><span data-localize="sidebar.nav.DASHBOARD">{{"Dashboard"|trans }}</span>
@@ -82,3 +103,26 @@
                             </li>
                         </ul>
                     </li>
+
+               <li class="{% if page_id is defined
+                   and
+                   page_id is not empty
+                   and
+                   page_id in ["post_payment"]
+               %} active {% endif %} ">
+                   <a  href="#postpayment" title="{{"Payment"|trans }}" data-toggle="collapse">
+                       <em class="icon-note"></em><span data-localize="sidebar.nav.PAYMENTS">{{"Payment"|trans }}</span>
+                   </a>
+                   <ul class="sidebar-nav sidebar-subnav collapse" id="postpayment">
+                       <li class="sidebar-subnav-header">{{"Payment"|trans }}</li>
+                       <li class="{% if page_id is defined
+                           and
+                           page_id is not empty
+                           and
+                           page_id =="post_payment"
+                       %} active {% endif %} ">
+                           <a href="{{ path("post_payment") }}" title="{{"Payment List"|trans }}"><span data-localize="sidebar.nav.form.LIST_PAYMENTS">{{"Payment List"|trans }}</span></a>
+                       </li>
+
+                   </ul>
+               </li>
