--- a/templates/cabinet/payment/payments.html.twig
+++ b/templates/cabinet/payment/payments.html.twig
@@ -17,9 +17,10 @@
                                         <table class="table table-striped table-bordered table-hover">
                                             <thead>
                                             <tr>
-                                               <th>{{ "User Name" | trans }}</th>
-                                               <th>{{ "Country" | trans }}</th>
-                                               <th>{{ "Adress" | trans }}</th>
+                                                <th>{{ 'Nomer scheta'| trans }}</th>
+                                                <th>{{ 'Sposob oplaty'| trans }}</th>
+                                                <th>{{ 'Sum'| trans }}</th>
+                                                <th>{{ 'Status'| trans }}</th>
                                                 <th></th>
                                             </tr>
                                             </thead>
@@ -27,17 +28,16 @@
                                             {% if items is defined and items is iterable  %}
                                                 {% for item in items %}
                                                  <tr>
-                                                    <td>{{ item.fullName }}</td>
-                                                    <td>{{ item.country }}</td>
-                                                    <td>{{ item.fullAddress }}</td>
-                                                     <td><a  href="{{ path("post_address_edit",{"id":item.id}) }}" class="btn btn-success">{{ "Edit Address" | trans }}
-                                                         </a></td>
+                                                    <td>{{ item.liqpayOrderId }}</td>
+                                                    <td>{{ "Card"|trans }}</td>
+                                                    <td>{{ item.sum }}</td>
+                                                    <td>{{ item.status | trans }}</td>
                                                  </tr>
                                                 {% endfor %}
 
                                             {% else %}
                                             <tr>
-                                                <td colspan="3">Нет покупок</td>
+                                                <td colspan="3">{{ 'Not pay yet'| trans }}</td>
                                             </tr>
                                             {% endif %}
                                             </tbody>
