--- a/templates/cabinet/cabinet_layout.html.twig
+++ b/templates/cabinet/cabinet_layout.html.twig
@@ -38,7 +38,7 @@
                  <div class="col-xl-6 col-6 br py-2">
                      <div class="row">
                          <div class="col-lg-12">
-                             <h4>{{ "Find Order"| trans }}</h4>
+                             <h4>{{ "Отследить отправление"| trans }}</h4>
                              {% if page_id is defined
                                  and
                                  page_id is not empty
@@ -59,7 +59,7 @@
                                                      required="required"
                                              />
                                                  <div class="input-group-append">
-                                                    <button type="submit" class="btn btn-success">{{ "Otsledit"|trans }}</button>
+                                                    <button type="submit" class="btn btn-success">{{ "Отследить"|trans }}</button>
                                                  </div>
                                      </div>
                                  </div>
