--- a/templates/cabinet/sidebar/navbarleft.html.twig
+++ b/templates/cabinet/sidebar/navbarleft.html.twig
@@ -5,5 +5,5 @@
     <li class="nav-item d-none d-md-block">
         <!-- Button used to collapse the left sidebar. Only visible on tablet and desktops--><a class="nav-link" id="user-block-toggle" href="#user-block" data-toggle="collapse"><em class="icon-user"></em></a></li><!-- END User avatar toggle-->
     <!-- START lock screen-->
-    <li class="nav-item d-none d-md-block"><a class="nav-link" href="lock.html" title="Lock screen"><em class="icon-lock"></em></a></li><!-- END lock screen-->
+{#    <li class="nav-item d-none d-md-block"><a class="nav-link" href="lock.html" title="Lock screen"><em class="icon-lock"></em></a></li><!-- END lock screen-->#}
 </ul><!-- END Left navbar-->
